--- a/smarthome/items/bathroom.conf
+++ b/smarthome/items/bathroom.conf
@@ -1,15 +1,14 @@
-[badkamer]
+[bathroom]
 	floorarea = 15
 	volume = 50
 	lossarea = 35
 	wallarea = 40
-	zone = 'badkamers'
+	zone = 'bathrooms'
 	U = 0.60
 	
 ######################################################################################
 	[[lights]]
-		[[[licht]]]
-			name = Licht
+		[[[light]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/1/91
@@ -18,8 +17,7 @@
 			visu_acl = rw
 			light_check_off = 1
 			
-		[[[licht_douche]]]
-			name = Licht
+		[[[light_shower]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/1/92
@@ -29,8 +27,7 @@
 			light_check_off = 1		
 			ventilation_high = 1	
 			
-		[[[licht_spiegel]]]
-			name = Licht
+		[[[light_mirror]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/1/93
@@ -45,7 +42,7 @@
 
 ######################################################################################		
 	[[measurements]]
-		[[[temperatuur]]]
+		[[[temperature]]]
 			type = num
 			eval = value-1.8
 			knx_dpt = 9
