--- a/smarthome/items/bedroom1.conf
+++ b/smarthome/items/bedroom1.conf
@@ -1,14 +1,14 @@
-[slaapkamer1]
+[bedroom1]
 	floorarea = 40
 	volume = 100
 	lossarea = 80
 	wallarea = 100
-	zone = 'slaapkamers'
+	zone = 'bedrooms'
 	U = 0.60
 	
 ######################################################################################
 	[[lights]]
-		[[[licht]]]
+		[[[light]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/1/101
@@ -17,7 +17,7 @@
 			visu_acl = rw
 			light_check_off = 1
 			
-		[[[licht_dressing]]]
+		[[[light_dressing]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/1/102
@@ -26,7 +26,7 @@
 			visu_acl = rw
 			light_check_off = 1
 			
-		[[[nachtlamp_links]]]
+		[[[bedlight_left]]]
 			type = num
 			knx_dpt = 1
 			knx_listen = 1/4/104
@@ -43,7 +43,7 @@
 				knx_init = 1/5/104
 				visu_acl = rw
 				
-		[[[nachtlamp_rechts]]]
+		[[[bedlight_right]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/4/105
@@ -62,7 +62,7 @@
 	
 ######################################################################################
 	[[windows]]
-		[[[rechts]]]
+		[[[right]]]
 			area = 0.6800
 			orientation = 175
 			tilt = 90
@@ -106,7 +106,7 @@
 			[[[[heat_flow_irradiation_max]]]]
 				type = num
 				
-		[[[voor]]]
+		[[[front]]]
 			area = 0.8624
 			orientation = -95
 			tilt = 90
@@ -159,7 +159,7 @@
 
 ######################################################################################		
 	[[measurements]]
-		[[[temperatuur]]]
+		[[[temperature]]]
 			type = num
 			eval = value-2.8
 			knx_dpt = 9
