--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -49,13 +49,13 @@
 			
 		[[[speeds]]]
 			[[[[speed0]]]]
-				item = 'centraal.ventilation.uit'
+				item = 'central.ventilation.uit'
 			[[[[speed1]]]]
-				item = 'centraal.ventilation.laag'
+				item = 'central.ventilation.laag'
 			[[[[speed2]]]]
-				item = 'centraal.ventilation.medium'
+				item = 'central.ventilation.medium'
 			[[[[speed3]]]]
-				item = 'centraal.ventilation.hoog'
+				item = 'central.ventilation.hoog'
 				
 		[[[flowrate]]]
 			type = num
@@ -68,30 +68,30 @@
 	[[flukso]]
 		[[[elektriciteit_totaal]]]
 			type = num
-			sensor = 'ce8ab098fc7479dcb3699f307c8e88a7'
-			token  = 'cccf535e298d18959a42ab670a4a04a1'
+			sensor = 'ce8ab098fc7479dcbaaaaaaaaaaaaaaa'
+			token  = 'cccf535e298d18959aaaaaaaaaaaaaaa'
 			unit   = 'watt'
 			mysql_id = 1
 				
 		[[[elektriciteit_verwarming]]]
 			type = num
-			sensor = '56f28789f52236df4647d06111ff515a'
-			token  = '895bbd6858e534aa2a0ebdd4155ab797'
+			sensor = '56f28789f52236df4aaaaaaaaaaaaaaa'
+			token  = '895bbd6858e534aa2aaaaaaaaaaaaaaa'
 			unit   = 'watt'
 			mysql_id = 2
 			
 				
 		[[[gas]]]
 			type = num
-			sensor = 'd5a747b86224834f745f4c9775d70241'
-			token  = 'eb11d91053cf077bef7f3f95660d035a'
+			sensor = 'd5a747b86224834f7aaaaaaaaaaaaaaa'
+			token  = 'eb11d91053cf077beaaaaaaaaaaaaaaa'
 			unit   = 'watt'
 			mysql_id = 3
 
 
 ######################################################################################
 	[[zones]]		
-		[[[leefruimtes]]]
+		[[[livingzone]]]
 			floorarea = 102.6
 			volume = 304
 			lossarea = 268
@@ -134,7 +134,7 @@
 			[[[[heat_flow_cooling_wanted]]]]
 				type = num	
 				
-		[[[badkamers]]]
+		[[[bathrooms]]]
 			floorarea = 14.0
 			volume = 33.6
 			lossarea = 7.8
@@ -177,7 +177,7 @@
 			[[[[heat_flow_cooling_wanted]]]]
 				type = num	
 				
-		[[[slaapkamers]]]
+		[[[sleepingzone]]]
 			floorarea = 54.7
 			volume = 136.8
 			lossarea = 134.7
