--- a/smarthome/items/corridor.conf
+++ b/smarthome/items/corridor.conf
@@ -1,27 +1,16 @@
-[overloop]
+[corridor]
 	floorarea = 20
 	volume = 50
 	lossarea = 36
 	wallarea = 40
-	zone = 'leefruimtes'
+	zone = 'livingzone'
 	U = 0.60
 	
 ######################################################################################
 ######################################################################################
 ######################################################################################
 	[[lights]]
-		[[[spots_overloop]]]
-			name = Licht
-			type = bool
-			knx_dpt = 1
-			knx_listen = 1/1/81
-			knx_send = 1/1/81
-			knx_init = 1/1/81
-			visu_acl = rw
-			light_check_off = 1
-	
-		[[[spots_nachthal]]]
-			name = Licht
+		[[[spots_corridor]]]
 			type = bool
 			knx_dpt = 1
 			knx_listen = 1/4/82
@@ -31,7 +20,6 @@
 			light_check_off = 1
 			
 			[[[[value]]]]
-				name = Licht
 				type = num
 				knx_dpt = 5
 				knx_listen = 1/5/82
@@ -42,7 +30,7 @@
 				
 ######################################################################################
 	[[windows]]
-		[[[rechts]]]
+		[[[right]]]
 			area = 0.6800
 			orientation = 175
 			tilt = 90
@@ -86,7 +74,7 @@
 			[[[[heat_flow_irradiation_max]]]]
 				type = num
 				
-		[[[achter]]]
+		[[[back]]]
 			area = 0.8624
 			orientation = 85
 			tilt = 90
