--- a/smarthome/items/hallway.conf
+++ b/smarthome/items/hallway.conf
@@ -1,14 +1,14 @@
-[hal]
+[hallway]
 	floorarea = 10
 	volume = 26
 	lossarea = 20
 	wallarea = 36
-	zone = 'leefruimtes'
+	zone = 'livingzone'
 	U = 0.60
 	
 ######################################################################################
 	[[lights]]
-		[[[licht]]]
+		[[[light]]]
 			type = bool
             knx_dpt = 1
             knx_listen = 1/1/31
@@ -22,7 +22,7 @@
 	
 ######################################################################################		
 	[[measurements]]
-		[[[temperatuur]]]
+		[[[temperature]]]
 			type = num
 			eval = value-2.2
 			knx_dpt = 9
