--- a/smarthome/items/central.conf
+++ b/smarthome/items/central.conf
@@ -1,8 +1,8 @@
-[centraal]
+[central]
 
 ######################################################################################
 	[[general]]
-		[[[dagstand]]]
+		[[[day]]]
 			type = bool
 			enforce_updates = yes #<<- zorgt ervoor dat elke waarde naar de bus geschreven wordt verandering of niet
 			knx_dpt = 1
@@ -12,7 +12,7 @@
 		
 ######################################################################################
 	[[lights]]
-		[[[alles]]]
+		[[[all]]]
 			type = bool
 			enforce_updates = yes
 			knx_dpt = 1
@@ -28,15 +28,7 @@
 			knx_send = 1/4/0
 			visu_acl = rw	
 			
-		[[[kelder]]]
-			type = bool
-			enforce_updates = yes
-			knx_dpt = 1
-			knx_listen = 1/0/1
-			knx_send = 1/0/1
-			visu_acl = rw
-			
-		[[[gelijkvloers]]]
+		[[[firstfloor]]]
 			type = bool
 			enforce_updates = yes
 			knx_dpt = 1
@@ -44,7 +36,7 @@
 			knx_send = 1/0/2
 			visu_acl = rw
 			
-		[[[verdieping]]]
+		[[[secondfloor]]]
 			type = bool
 			enforce_updates = yes
 			knx_dpt = 1
@@ -52,67 +44,10 @@
 			knx_send = 1/0/3
 			visu_acl = rw
 			
-		[[[buiten]]]
-			type = bool
-			enforce_updates = yes
-			knx_dpt = 1
-			knx_listen = 1/0/4
-			knx_send = 1/0/4
-			visu_acl = rw
-			
-		[[[nacht]]]
-			type = bool
-			enforce_updates = yes
-			knx_dpt = 1
-			knx_listen = 1/0/5
-			knx_send = 1/0/5
-			visu_acl = rw
-			
 ######################################################################################
 	[[shading]]
-	
-		[[[screens]]]
-			[[[[move]]]]
-                type = num
-                visu_acl = rw
-                knx_dpt = 1
-                knx_send = 2/1/74
-            [[[[stop]]]]
-                type = num
-                visu_acl = rw
-                enforce_updates = yes
-                knx_dpt = 1
-                knx_send = 2/2/74
-            [[[[pos]]]]
-                type = num
-                visu_acl = rw
-                knx_dpt = 5
-                knx_listen = 2/4/74
-                knx_send = 2/3/74
-                knx_init = 2/4/74
-		
-		[[[rolluiken]]]
-			[[[[move]]]]
-                type = num
-                visu_acl = rw
-                knx_dpt = 1
-                knx_send = 2/1/46
-            [[[[stop]]]]
-                type = num
-                visu_acl = rw
-                enforce_updates = yes
-                knx_dpt = 1
-                knx_send = 2/2/46
-            [[[[pos]]]]
-                type = num
-                visu_acl = rw
-				enforce_updates = yes 
-                knx_dpt = 5
-                knx_listen = 2/3/46
-                knx_send = 2/3/46
-                knx_init = 2/3/46
-				
-		[[[rolluiken_gelijkvloers]]]
+			
+		[[[shading_firstfloor]]]
 			[[[[move]]]]
                 type = num
                 visu_acl = rw
@@ -133,7 +68,7 @@
                 knx_send = 2/3/45
                 knx_init = 2/4/45	
 				
-		[[[rolluiken_verdieping]]]
+		[[[shading_secondfloor]]]
 			[[[[move]]]]
                 type = num
                 visu_acl = rw
@@ -156,14 +91,14 @@
 				
 ######################################################################################
 	[[ventilation]]
-		[[[uit]]]
+		[[[off]]]
 			type = bool
 			enforce_updates = yes
 			knx_dpt = 1
 			knx_listen = 4/0/0
 			knx_send = 4/0/0
 		
-		[[[laag]]]
+		[[[low]]]
 			type = bool
 			
 		[[[medium]]]
@@ -173,7 +108,7 @@
 			knx_listen = 4/0/1
 			knx_send = 4/0/1
 					
-		[[[hoog]]]
+		[[[high]]]
 			type = bool
 			enforce_updates = yes
 			knx_dpt = 1
