added mysql password to items

--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -1,4 +1,6 @@
 [building]
+	[[mysql]]
+		password = 'admin'
 ######################################################################################
 	[[irradiation]]
 		[[[azimut]]]
