--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -1,6 +1,7 @@
 [building]
 	[[mysql]]
 		password = 'admin'
+		backupdir = '/mnt/hdd/backup/knxcontrol'
 ######################################################################################
 	[[irradiation]]
 		[[[azimut]]]
