added weekly backup of measurements data, seems to be working, no data yet however

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -29,6 +29,10 @@
 	filename = mysql_backup.py
 	crontab = 5 0 * 0
 	
+[mysql_measurements_backup]
+	filename = mysql_measurements_backup.py
+	crontab = 12 0 * 0
+	
 ############################################################################
 # Thermal comfort management
 ############################################################################	
