--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -16,6 +16,11 @@
 [mysql_measurements]
 	filename = mysql_measurements.py
 	crontab = 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59 * * *
+
+[mysql_average_measurements_quarterhour]
+	filename = mysql_average_measurements_quarterhour.py
+	crontab = 0,15,30,45 * * *
+	prio = 5
 	
 [mysql_average_measurements_week]
 	filename = mysql_average_measurements_week.py
