changed some item and database structure

--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -1,7 +1,13 @@
 [building]
+######################################################################################
+# General data
+######################################################################################
 	[[mysql]]
 		password = 'admin'
 		backupdir = ''
+		
+######################################################################################
+# Weather measurement and calculation data
 ######################################################################################
 	[[irradiation]]
 		[[[azimut]]]
@@ -40,8 +46,40 @@
 		[[[sensor]]]
 			item = 'buiten.measurements.regen'
 		
-
 ######################################################################################
+# Energy and heating measurment data
+######################################################################################
+	[[energy]]
+		[[[water]]]
+			type = num
+			item = ''
+		[[[gas]]]
+			type = num
+			item = 'flukso.gas'
+		[[[electricity]]]
+			type = num
+			item = 'flukso.electricity_total'
+		
+	[[heating]]
+		[[[gas_boiler]]]
+			type = num
+			system = 'cgb'
+			item = 'flukso.gas'
+		[[[heat_pump]]]
+			type = num
+			system = 'ahp'
+			item = 'flukso.electricity_heating'
+		#[[[ground_coupled_heat_pump]]]
+		#	type = num
+		#	system = 'ghp'
+		#[[[solar_thermal]]]
+		#	type = num
+		#	system = 'sth'
+		#[[[combined_heat_power]]]
+		#	type = num
+		#	system = 'chp'
+		# ...
+		
 	[[ventilation]]
 		[[[speedcontrol]]]
 			type = num
@@ -67,39 +105,18 @@
 			type = bool
 			visu_acl = rw
 			
+
 ######################################################################################
-	[[flukso]]
-		[[[elektriciteit_totaal]]]
-			type = num
-			sensor = 'ce8ab098fc7479dcbaaaaaaaaaaaaaaa'
-			token  = 'cccf535e298d18959aaaaaaaaaaaaaaa'
-			unit   = 'watt'
-			mysql_id = 1
-				
-		[[[elektriciteit_verwarming]]]
-			type = num
-			sensor = '56f28789f52236df4aaaaaaaaaaaaaaa'
-			token  = '895bbd6858e534aa2aaaaaaaaaaaaaaa'
-			unit   = 'watt'
-			mysql_id = 2
-			
-				
-		[[[gas]]]
-			type = num
-			sensor = 'd5a747b86224834f7aaaaaaaaaaaaaaa'
-			token  = 'eb11d91053cf077beaaaaaaaaaaaaaaa'
-			unit   = 'watt'
-			mysql_id = 3
-
-
+# Building zones definition
 ######################################################################################
 	[[zones]]		
 		[[[livingzone]]]
-			floorarea = 102.6
 			volume = 304
-			lossarea = 268
-			wallarea = 182
-			U = 0.60
+			floorarea = 102.6
+			wallarea = 182     		# total area of walls
+			lossarea = 268     		# total area of walls, floors and ceilings adjacent to the outside
+			U = 0.60				# average U value of all walls, floors and ceilings adjacent to the outside
+			lightness = 'heavy'     # lightness of construction, ('light' (wood construction) / 'medium' (classic no floor heating) / 'heavy' (classic floor heating) )
 	
 			[[[[T_operational]]]]
 				item = 'living.measurements.temperatuur_raam'
@@ -136,6 +153,17 @@
 				type = num	
 			[[[[heat_flow_cooling_wanted]]]]
 				type = num	
+			
+			[[[[model]]]]
+				[[[[[C]]]]]	
+					type = num
+				[[[[[UA_amb]]]]]	
+					type = num
+				# UA_zones = [0 UA_12 UA_13 ...]
+				[[[[[UA_zones]]]]]	
+					type = list
+
+				
 				
 		[[[bathrooms]]]
 			floorarea = 14.0
@@ -224,19 +252,14 @@
 				type = num	
 
 ######################################################################################
+# System identification data
+######################################################################################
 	[[model]]
 		[[[identify]]]
 			type = bool
 			value = False
 			enforce_updates = On
 			visu_acl = rw
-			
-		# UA = [UA_1amb UA_12 UA_13 UA_2amb UA_23 UA_3amb]...
-		[[[UA]]]
-			type = list
-		# C = [C_1 C_2 C_3]
-		[[[C]]]
-			type = list
 				
 ######################################################################################
 	[[shading]]
