changed the way ventilation is controlled so it fits in the new structure

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -58,12 +58,8 @@
 	
 [ventilation_control]
 	filename = ventilation_control.py
-	watch_item = *:ventilation_high
+	watch_item = *.ventilation.high
 	crontab = 0,30 * * *
-	
-[ventilation_set_speed]
-	filename = ventilation_set_speed.py
-	watch_item = building.ventilation.speedcontrol
 	
 [shading_control]
 	filename = shading_control.py
