--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -47,7 +47,7 @@
 			item = 'buiten.measurements.regen'
 		
 ######################################################################################
-# Energy and heating measurment data
+# Energy and heating measurement data
 ######################################################################################
 	[[energy]]
 		[[[water]]]
@@ -80,30 +80,9 @@
 		#	system = 'chp'
 		# ...
 		
-	[[ventilation]]
-		[[[speedcontrol]]]
-			type = num
-			visu_acl = rw
-			
-		[[[ventilation_high]]]
-			type = bool
-			
-		[[[speeds]]]
-			[[[[speed0]]]]
-				item = 'central.ventilation.uit'
-			[[[[speed1]]]]
-				item = 'central.ventilation.laag'
-			[[[[speed2]]]]
-				item = 'central.ventilation.medium'
-			[[[[speed3]]]]
-				item = 'central.ventilation.hoog'
-				
+	[[ventilation]]			
 		[[[flowrate]]]
 			type = num
-
-		[[[bypass]]]
-			type = bool
-			visu_acl = rw
 			
 
 ######################################################################################
