--- a/smarthome/items/central.conf
+++ b/smarthome/items/central.conf
@@ -91,27 +91,23 @@
 				
 ######################################################################################
 	[[ventilation]]
-		[[[off]]]
-			type = bool
+		[[[speed]]]
+			type = num
+			visu_acl = rw
 			enforce_updates = yes
-			knx_dpt = 1
-			knx_listen = 4/0/0
-			knx_send = 4/0/0
-		
-		[[[low]]]
+			knx_dpt = 5
+			knx_listen = 4/0/4
+			knx_send = 4/0/4
+			min = 20
+			max = 23
+			flowrate_min = 0
+			flowrate_max = 400
+	
+		[[[bypass]]]
 			type = bool
+			visu_acl = rw
 			
-		[[[medium]]]
-			type = bool
-			enforce_updates = yes
-			knx_dpt = 1
-			knx_listen = 4/0/1
-			knx_send = 4/0/1
-					
 		[[[high]]]
 			type = bool
-			enforce_updates = yes
-			knx_dpt = 1
-			knx_listen = 4/0/2
-			knx_send = 4/0/2
-				
+			visu_acl = rw
+			knx_listen = 4/0/3
