added separate password for websocket

--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -2,6 +2,8 @@
 	[[mysql]]
 		password = 'admin'
 		backupdir = ''
+	[[data]]
+		password = 'admin'
 		
 ######################################################################################
 	[[irradiation]]
