added smarthome.py weather loading and updated weather widget

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -40,7 +40,12 @@
 	
 ############################################################################
 # Thermal comfort management
-############################################################################	
+############################################################################
+[load_weatherforecast]
+	filename = load_weatherforecast.py
+	crontab = init
+	cycle = 3600
+	
 [calculate_irradiation]
 	filename = calculate_irradiation.py
 	crontab = init
