moved measurements initialization to mysql_init to be sure execution is in the correct order

--- a/smarthome/items/knxcontrol.conf
+++ b/smarthome/items/knxcontrol.conf
@@ -38,6 +38,10 @@
 
 			[[[[irradiation]]]]
 				[[[[[theoretical]]]]]
+					[[[[[azimut]]]]]
+						type = num
+					[[[[[altitude]]]]]
+						type = num
 					[[[[[direct]]]]]
 						type = num
 					[[[[[diffuse]]]]]
@@ -93,39 +97,17 @@
 			type = num
 			item = 'flukso.gas'
 			eval = value
-			
+
+		[[[gasoil]]]
+			type = num
+			item = ''
+			eval = value
+	
 		[[[water]]]
 			type = num
 			item = ''
 			eval = value
 			
-######################################################################################
-	[[heat]]
-		[[[production]]]
-			type = 'list'
-			# {0: {type:'heatpump', power:'', control:'' }, ...}
-
-		[[[emission]]]
-			type = 'list'
-			# {0: {type:'floorheating', power:'', control:'' }, ...}
-			
-				
-######################################################################################
-	[[electricity]]
-		[[[production]]]
-			type = 'list'
-			# {0: {type:'pv', power:'', control:'' }, ...}
-			
-
-######################################################################################
-	[[ventilation]]
-		[[[fan]]]
-			type = num
-			item = ''
-			
-		[[[heatrecovery]]]
-			item = ''
-	
 
 ######################################################################################
 	[[building]]
@@ -160,7 +142,63 @@
 			[[[[airquality]]]]
 				type = num
 				item = ''
-		
+
+######################################################################################
+	[[ventilation]]
+		[[[fanspeed]]]
+			type = num
+			item = ''
+
+		[[[heatrecovery]]]
+			item = ''
+
+######################################################################################
+	[[heat]]
+		[[[production]]]
+			[[[[heatpump]]]]
+				systemtype = 'heatpump'
+				[[[[[power]]]]]
+					type = num
+					item = ''
+					eval = value
+				[[[[[control]]]]]
+					type = num
+					item = ''
+			[[[[gasboiler]]]]
+				systemtype = 'condensing gas boiler'
+				[[[[[power]]]]]
+					type = num
+					item = ''
+					eval = value
+				[[[[[control]]]]]
+					type = num
+					item = ''
+
+		[[[emission]]]
+			[[[[firstfloor]]]]
+				systemtype = 'floorheating'
+				[[[[[power]]]]]
+					type = num
+					item = ''
+					eval = value
+				[[[[[control]]]]]
+					type = num
+					item = ''
+
+######################################################################################
+	[[electricity]]
+		[[[production]]]
+			[[[[pv]]]]
+				systemtype = 'pv'
+				[[[[[power]]]]]
+					type = num
+					item = ''
+					eval = value
+				[[[[[control]]]]]
+					type = num
+					item = ''
+
+
 ######################################################################################
 	[[model]]
 		type = list
