Renamed measurement table and set default measurements

--- a/smarthome/items/knxcontrol.conf
+++ b/smarthome/items/knxcontrol.conf
@@ -38,15 +38,15 @@
 
 			[[[[irradiation]]]]
 				[[[[[theoretical]]]]]
-					[[[[[azimut]]]]]
+					[[[[[[azimut]]]]]]
 						type = num
-					[[[[[altitude]]]]]
+					[[[[[[altitude]]]]]]
 						type = num
-					[[[[[direct]]]]]
+					[[[[[[direct]]]]]]
 						type = num
-					[[[[[diffuse]]]]]
+					[[[[[[diffuse]]]]]]
 						type = num
-					[[[[[sensor]]]]]
+					[[[[[[sensor]]]]]]
 						type = num	
 
 				[[[[[sensor]]]]]
@@ -57,11 +57,11 @@
 					eval = value * 128
 
 				[[[[[estimate]]]]]
-					[[[[[direct]]]]]
+					[[[[[[direct]]]]]]
 						type = num
-					[[[[[diffuse]]]]]
+					[[[[[[diffuse]]]]]]
 						type = num
-					[[[[[clouds]]]]]
+					[[[[[[clouds]]]]]]
 						type = num
 						
 			[[[[precipitation]]]]	
@@ -98,7 +98,7 @@
 			item = 'flukso.gas'
 			eval = value
 
-		[[[gasoil]]]
+		[[[fueloil]]]
 			type = num
 			item = ''
 			eval = value
@@ -150,6 +150,7 @@
 			item = ''
 
 		[[[heatrecovery]]]
+			type = bool
 			item = ''
 
 ######################################################################################
