--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -1,40 +1,56 @@
-# logic.conf
+######################################################################################
+#    Copyright 2015 Brecht Baeten
+#    This file is part of KNXControl.
+#
+#    KNXControl is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    KNXControl is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with KNXControl.  If not, see <http://www.gnu.org/licenses/>.
+######################################################################################
 
-############################################################################
+######################################################################################
 # MySQL logics
-############################################################################
+######################################################################################
 [mysql_init]
 	filename = mysql_init.py
 	crontab = init
 
-#[mysql_measurements]
-#	filename = mysql_measurements.py
-#	crontab = * * * *
+[mysql_backup]
+	filename = mysql_backup.py
+	crontab = 5 0 * 0
 
-#[mysql_average_measurements_quarterhour]
-#	filename = mysql_average_measurements_quarterhour.py
-#	crontab = 0,15,30,45 * * *
-#	prio = 5
-	
-#[mysql_average_measurements_week]
-#	filename = mysql_average_measurements_week.py
-#	crontab = 1 0 * 0
-	
-#[mysql_average_measurements_month]
-#	filename = mysql_average_measurements_month.py
-#	crontab = 0 0 1 *
+[mysql_measurements]
+	filename = mysql_measurements.py
+	crontab = * * * *
 
-#[mysql_backup]
-#	filename = mysql_backup.py
-#	crontab = 5 0 * 0
+[mysql_measurements_average_quarterhour]
+	filename = mysql_measurements_average_quarterhour.py
+	crontab = 0,15,30,45 * * *
+	prio = 5
 	
-#[mysql_measurements_backup]
-#	filename = mysql_measurements_backup.py
-#	crontab = 12 0 * 0
+[mysql_measurements_average_week]
+	filename = mysql_measurements_average_week.py
+	crontab = 1 0 * 0
+	
+[mysql_measurements_average_month]
+	filename = mysql_measurements_average_month.py
+	crontab = 0 0 1 *
+	
+[mysql_measurements_backup]
+	filename = mysql_measurements_backup.py
+	crontab = 12 0 * 0
 
-############################################################################
+######################################################################################
 # Forecasts
-############################################################################
+######################################################################################
 #[weatherforecast_get]
 #	filename = weatherforecast_get.py
 #	crontab = init | 0 * * *
