updated weather predictions

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -49,11 +49,11 @@
 	crontab = 12 0 * 0
 
 ######################################################################################
-# Forecasts
+# Predictions
 ######################################################################################
-#[weatherforecast_get]
-#	filename = weatherforecast_get.py
-#	crontab = init | 0 * * *
+[predictions_weather]
+	filename = predictions_weather.py
+	crontab = init | 0 * * *
 
 
 ############################################################################
