--- a/smarthome/items/knxcontrol.conf
+++ b/smarthome/items/knxcontrol.conf
@@ -83,7 +83,7 @@
 			[[[[detailed]]]]
 				type = list
 
-			[[[[general]]]]
+			[[[[daily]]]]
 				type = list
 						
 ######################################################################################
