renamed alarms and actions

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -48,6 +48,19 @@
 	filename = mysql_measurements_backup.py
 	crontab = 12 0 * 0
 
+
+############################################################################
+# Alarms
+############################################################################
+[alarms]
+	filename = alarms.py
+	crontab = * * * *
+	prio = 2
+	
+[set_item]
+	filename = set_item.py
+
+
 ######################################################################################
 # Predictions
 ######################################################################################
@@ -64,11 +77,10 @@
 #	crontab = init
 #	cycle = 60
 
+
 ############################################################################
 # Thermal comfort management
 ############################################################################
-
-	
 #[calculate_irradiation]
 #	filename = calculate_irradiation.py
 #	crontab = init
@@ -120,18 +132,6 @@
 #	filename = presence_all_lights_out.py
 #	watch_item = *:light_check_off	
 	
-	
-############################################################################
-# Alarms
-############################################################################
-#[alarm_run]
-#	filename = alarm_run.py
-#	crontab = * * * *
-#	prio = 2
-	
-#[alarm_action]
-#	filename = alarm_action.py
-#	prio = 2
 	
 ############################################################################
 # Subfunctions
