removed commented out flukso

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -16,6 +16,7 @@
 #    along with KNXControl.  If not, see <http://www.gnu.org/licenses/>.
 ######################################################################################
 
+
 ######################################################################################
 # MySQL logics
 ######################################################################################
@@ -72,10 +73,9 @@
 ############################################################################
 # Flukso logics
 ############################################################################
-#[flukso]
-#	filename = flukso.py
-#	crontab = init
-#	cycle = 60
+[flukso]
+	filename = flukso.py
+	crontab = * * * *
 
 
 ############################################################################
