added knxcontrol.py to update items in knxcontrol from other items and parse sum products of inputs

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -18,19 +18,19 @@
 
 
 ######################################################################################
-# MySQL logics
+# KNX Control
 ######################################################################################
 [mysql_init]
 	filename = mysql_init.py
 	crontab = init
 
-[mysql_backup]
-	filename = mysql_backup.py
-	crontab = 5 0 * 0
+[knxcontrol]
+	filename = knxcontrol.py
+	crontab = * * * *
 
+# measurements
 [mysql_measurements]
 	filename = mysql_measurements.py
-	crontab = * * * *
 
 [mysql_measurements_average_quarterhour]
 	filename = mysql_measurements_average_quarterhour.py
@@ -44,6 +44,12 @@
 [mysql_measurements_average_month]
 	filename = mysql_measurements_average_month.py
 	crontab = 0 0 1 *
+
+# backups
+
+[mysql_backup]
+	filename = mysql_backup.py
+	crontab = 5 0 * 0
 	
 [mysql_measurements_backup]
 	filename = mysql_measurements_backup.py
@@ -65,9 +71,9 @@
 ######################################################################################
 # Predictions
 ######################################################################################
-[predictions_weather]
-	filename = predictions_weather.py
-	crontab = init | 0 * * *
+#[predictions_weather]
+#	filename = predictions_weather.py
+#	crontab = init | 0 * * *
 
 
 ############################################################################
