--- a/smarthome/items/flukso.conf
+++ b/smarthome/items/flukso.conf
@@ -1,12 +1,12 @@
 [flukso]
 	ip = '192.168.1.8'
-	[[elektriciteit_totaal]]
+	[[electricity_total]]
 		type = num
 		sensor = 'ce8ab098fc7479dcbaaaaaaaaaaaaaaa'
 		token  = 'cccf535e298d18959aaaaaaaaaaaaaaa'
 		unit   = 'watt'
 			
-	[[elektriciteit_verwarming]]
+	[[electricity_heating]]
 		type = num
 		sensor = '56f28789f52236df4aaaaaaaaaaaaaaa'
 		token  = '895bbd6858e534aa2aaaaaaaaaaaaaaa'
