--- a/smarthome/items/knxcontrol.conf
+++ b/smarthome/items/knxcontrol.conf
@@ -33,7 +33,7 @@
 		[[[current]]]
 			[[[[temperature]]]]	
 				type = num
-				item = 'buiten.measurements.temperatuur'
+				item = 'outside.measurements.temperature'
 				eval = value
 
 			[[[[irradiation]]]]
@@ -53,7 +53,7 @@
 					type = num
 					orientation  = -5
 					tilt = 10
-					item = 'buiten.measurements.lichtsterkte'
+					item = 'outside.measurements.lightstrength'
 					eval = value * 128
 
 				[[[[[estimate]]]]]
@@ -66,13 +66,13 @@
 						
 			[[[[precipitation]]]]	
 				type = num
-				item = 'buiten.measurements.regen'
+				item = 'outside.measurements.rain'
 				eval = value
 
 			[[[[wind]]]]	
 				[[[[[speed]]]]]
 					type = num
-					item = 'buiten.measurements.windsnelheid'
+					item = 'outside.measurements.windspeed'
 					eval = value
 				[[[[[direction]]]]]
 					type = num
@@ -90,7 +90,7 @@
 	[[energy]]
 		[[[electricity]]]
 			type = num
-			item = 'flukso.elektriciteit_totaal'
+			item = 'flukso.electricity_total'
 			eval = value
 			
 		[[[gas]]]
@@ -114,7 +114,7 @@
 		[[[living_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = '0.5*living.measurements.temperatuur_raam + 0.5*living.measurements.temperatuur_bureau'
+				item = '0.5*living.measurements.temperature_door + 0.5*study.measurements.temperature'
 			[[[[airquality]]]]
 				type = num
 				item = ''
@@ -122,7 +122,7 @@
 		[[[sleeping_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = '0.3*slaapkamer1.measurements.temperatuur + 0.4*slaapkamer2.measurements.temperatuur + 0.4*slaapkamer3.measurements.temperatuur'
+				item = ''
 			[[[[airquality]]]]
 				type = num
 				item = ''
@@ -130,7 +130,7 @@
 		[[[bathroom_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = 'badkamer.measurements.temperatuur'
+				item = ''
 			[[[[airquality]]]]
 				type = num
 				item = ''
