--- a/smarthome/items/building.conf
+++ b/smarthome/items/building.conf
@@ -1,249 +1,249 @@
-[building]
-	[[mysql]]
-		password = 'admin'
-		backupdir = ''
-	[[data]]
-		password = 'admin'
-		
+# this file will be automatically generated 
+
+
 ######################################################################################
-	[[irradiation]]
-		[[[azimut]]]
+# outside
+######################################################################################
+[outside]
+	zone = ''
+
+	[[measurements]]
+		[[[temperature]]]
 			type = num
-		[[[altitude]]]
+			eval = value
+			knx_dpt = 9
+			knx_listen = 3/1/11
+			knx_init = 3/1/11
+
+	[[[lightstrength]]]
 			type = num
-		[[[direct_theoretical]]]
+			eval = value
+			knx_dpt = 9
+			knx_listen = 3/1/12
+			knx_init = 3/1/12
+
+	[[[rain]]]
 			type = num
-		[[[diffuse_theoretical]]]
+			eval = value
+			knx_dpt = 9
+			knx_listen = 3/1/13
+			knx_init = 3/1/13
+
+	[[[windspeed]]]
 			type = num
-		[[[horizontal]]]
-			type = num
-		[[[cloud_factor]]]
-			type = num
-			value = 1
+			eval = value
+			knx_dpt = 9
+			knx_listen = 3/1/14
+			knx_init = 3/1/14
+
+
+######################################################################################
+# living
+######################################################################################
+[living]
+	floorarea = 60
+	volume = 400
+	lossarea = 295
+	wallarea = 320
+	zone = 'living_zone'
+	U = 0.60
+
+######################################################################################
+	[[lights]]	
+		[[[spots_kitchen]]]
+			type = bool
+			knx_dpt = 1
+			knx_listen = 1/1/63
+			knx_send = 1/1/63
+			knx_init = 1/1/63
+			visu_acl = rw
 			
-		[[[sensor]]]
-			item = 'buiten.measurements.lichtsterkte'
-			orientation  = -5
-			tilt = 10
-			[[[[theoretical_value]]]]
-				type = num
+		[[[light_dinnertable]]]
+			type = bool
+			knx_dpt = 1
+			knx_listen = 1/1/71
+			knx_send = 1/1/71
+			knx_init = 1/1/71
+			visu_acl = rw
 				
-	[[ambient_temperature]]
-		type = num	
-		[[[sensor]]]
-			item = 'buiten.measurements.temperatuur_weerstation'
+		[[[light_tv]]]
+			type = num
+			knx_dpt = 1
+			knx_listen = 1/4/74
+			knx_send = 1/1/74
+			knx_init = 1/4/74
+			visu_acl = rw
 			
-	[[wind_velocity]]
+			[[[[value]]]]
+				type = num
+				knx_dpt = 5
+				knx_listen = 1/5/74
+				knx_send = 1/3/74
+				knx_init = 1/5/74
+				visu_acl = rw
+			
+######################################################################################		
+	[[windows]]
+		[[[back]]]
+			area = 5.2528
+			orientation = -5
+			tilt = 90
+			transmittance = 0.5
+			U = 1.10
+
+			[[[[shading]]]]
+				transmittance = 0.1
+				close_at_night = 0
+				[[[[[move]]]]]
+					type = num
+					visu_acl = rw
+					knx_dpt = 1
+					knx_send = 2/1/61
+					knx_listen = 2/1/61
+				[[[[[stop]]]]]
+					type = num
+					visu_acl = rw
+					enforce_updates = yes
+					knx_dpt = 1
+					knx_send = 2/2/61
+				[[[[[value]]]]]
+					type = num
+					knx_dpt = 5
+					knx_listen = 2/4/61
+					knx_send = 2/3/61
+					knx_init = 2/4/61
+					visu_acl = rw
+				[[[[[auto]]]]]
+					type = bool
+					value = True
+					visu_acl = rw
+				[[[[[override]]]]]
+					type = bool
+					value = False
+					visu_acl = rw
+				[[[[[closed]]]]]
+					type = bool
+					value = False
+					visu_acl = rw
+					
+	[[doors]]
+
+
+
+	[[appliances]]
+
+######################################################################################
+	[[scenes]]
 		type = num
-		[[[sensor]]]
-			item = 'buiten.measurements.windsnelheid'
+		knx_dpt = 5
+		knx_listen = 0/0/11
+		knx_send = 1/0/11
+		knx_init = 1/0/11
+		visu_acl = rw
 			
-	[[rain]]
-		type = bool
-		[[[sensor]]]
-			item = 'buiten.measurements.regen'
+######################################################################################
+	[[measurements]]
+		[[[temperature_door]]]
+			type = num
+			eval = value-2.5
+			knx_dpt = 9
+			knx_listen = 3/1/71
+			knx_init = 3/1/71
+
+		[[[temperature_window]]]
+			type = num
+			eval = value-2.5
+			knx_dpt = 9
+			knx_listen = 3/1/72
+			knx_init = 3/1/72
+
+
+######################################################################################
+# Study
+######################################################################################
+[study]
+	floorarea = 60
+	volume = 400
+	lossarea = 295
+	wallarea = 320
+	zone = 'living_zone'
+	U = 0.60
+
+######################################################################################
+	[[lights]]	
+		[[[light]]]
+			type = bool
+			knx_dpt = 1
+			knx_listen = 1/1/43
+			knx_send = 1/1/43
+			knx_init = 1/1/43
+			visu_acl = rw
 		
+			
+######################################################################################		
+	[[windows]]
+		[[[front]]]
+			area = 5.2528
+			orientation = -5
+			tilt = 90
+			transmittance = 0.5
+			U = 1.10
+
+			[[[[shading]]]]
+				transmittance = 0.1
+				close_at_night = 0
+				[[[[[move]]]]]
+					type = num
+					visu_acl = rw
+					knx_dpt = 1
+					knx_send = 2/1/61
+					knx_listen = 2/1/61
+				[[[[[stop]]]]]
+					type = num
+					visu_acl = rw
+					enforce_updates = yes
+					knx_dpt = 1
+					knx_send = 2/2/61
+				[[[[[value]]]]]
+					type = num
+					knx_dpt = 5
+					knx_listen = 2/4/61
+					knx_send = 2/3/61
+					knx_init = 2/4/61
+					visu_acl = rw
+				[[[[[auto]]]]]
+					type = bool
+					value = True
+					visu_acl = rw
+				[[[[[override]]]]]
+					type = bool
+					value = False
+					visu_acl = rw
+				[[[[[closed]]]]]
+					type = bool
+					value = False
+					visu_acl = rw
 
 ######################################################################################
-	[[ventilation]]
-		[[[speedcontrol]]]
-			type = num
-			visu_acl = rw
-			
-		[[[ventilation_high]]]
-			type = bool
-			
-		[[[speeds]]]
-			[[[[speed0]]]]
-				item = 'central.ventilation.uit'
-			[[[[speed1]]]]
-				item = 'central.ventilation.laag'
-			[[[[speed2]]]]
-				item = 'central.ventilation.medium'
-			[[[[speed3]]]]
-				item = 'central.ventilation.hoog'
-				
-		[[[flowrate]]]
-			type = num
-
-		[[[bypass]]]
-			type = bool
-			visu_acl = rw
+	[[scenes]]
+		type = num
+		knx_dpt = 5
+		knx_listen = 0/0/11
+		knx_send = 1/0/11
+		knx_init = 1/0/11
+		visu_acl = rw
 			
 ######################################################################################
-	[[flukso]]
-		[[[elektriciteit_totaal]]]
+	[[measurements]]
+		[[[temperature]]]
 			type = num
-			sensor = 'ce8ab098fc7479dcbaaaaaaaaaaaaaaa'
-			token  = 'cccf535e298d18959aaaaaaaaaaaaaaa'
-			unit   = 'watt'
-			mysql_id = 1
-				
-		[[[elektriciteit_verwarming]]]
-			type = num
-			sensor = '56f28789f52236df4aaaaaaaaaaaaaaa'
-			token  = '895bbd6858e534aa2aaaaaaaaaaaaaaa'
-			unit   = 'watt'
-			mysql_id = 2
-			
-				
-		[[[gas]]]
-			type = num
-			sensor = 'd5a747b86224834f7aaaaaaaaaaaaaaa'
-			token  = 'eb11d91053cf077beaaaaaaaaaaaaaaa'
-			unit   = 'watt'
-			mysql_id = 3
+			eval = value-2.5
+			knx_dpt = 9
+			knx_listen = 3/1/41
+			knx_init = 3/1/41
 
 
-######################################################################################
-	[[zones]]		
-		[[[livingzone]]]
-			floorarea = 102.6
-			volume = 304
-			lossarea = 268
-			wallarea = 182
-			U = 0.60
-	
-			[[[[T_operational]]]]
-				item = 'living.measurements.temperatuur_raam'
-				type = num
-			[[[[T_set]]]]
-				type = num
-				value = 21
-				visu_acl = rw
-			[[[[heat_flow_temperature]]]]
-				type = num
-			[[[[heat_flow_transmission]]]]
-				type = num
-			[[[[heat_flow_internal]]]]
-				type = num
-			[[[[heat_flow_ventilation]]]]
-				type = num
-			[[[[heat_flow_ventilation_max]]]]
-				type = num
-			[[[[heat_flow_ventilation_min]]]]
-				type = num
-			[[[[heat_flow_irradiation]]]]
-				type = num
-			[[[[heat_flow_irradiation_max]]]]
-				type = num
-			[[[[heat_flow_irradiation_min]]]]
-				type = num
-			[[[[heat_flow_wanted]]]]
-				type = num	
-			[[[[heat_flow_ventilation_wanted]]]]
-				type = num	
-			[[[[heat_flow_irradiation_wanted]]]]
-				type = num
-			[[[[heat_flow_heating_wanted]]]]
-				type = num	
-			[[[[heat_flow_cooling_wanted]]]]
-				type = num	
-				
-		[[[bathrooms]]]
-			floorarea = 14.0
-			volume = 33.6
-			lossarea = 7.8
-			wallarea = 45.4
-			U = 0.50
-			
-			[[[[T_operational]]]]
-				item = 'badkamer.measurements.temperatuur'
-				type = num
-			[[[[T_set]]]]
-				type = num
-				value = 16
-				visu_acl = rw
-			[[[[heat_flow_temperature]]]]
-				type = num
-			[[[[heat_flow_transmission]]]]
-				type = num
-			[[[[heat_flow_internal]]]]
-				type = num
-			[[[[heat_flow_ventilation]]]]
-				type = num
-			[[[[heat_flow_ventilation_max]]]]
-				type = num
-			[[[[heat_flow_ventilation_min]]]]
-				type = num
-			[[[[heat_flow_irradiation]]]]
-				type = num
-			[[[[heat_flow_irradiation_max]]]]
-				type = num
-			[[[[heat_flow_irradiation_min]]]]
-				type = num
-			[[[[heat_flow_wanted]]]]
-				type = num	
-			[[[[heat_flow_ventilation_wanted]]]]
-				type = num	
-			[[[[heat_flow_irradiation_wanted]]]]
-				type = num
-			[[[[heat_flow_heating_wanted]]]]
-				type = num	
-			[[[[heat_flow_cooling_wanted]]]]
-				type = num	
-				
-		[[[sleepingzone]]]
-			floorarea = 54.7
-			volume = 136.8
-			lossarea = 134.7
-			wallarea = 114.1
-			U = 0.60
-			
-			[[[[T_operational]]]]
-				item = 'slaapkamer1.measurements.temperatuur'
-				type = num
-			[[[[T_set]]]]
-				type = num
-				value = 20
-				visu_acl = rw
-			[[[[heat_flow_temperature]]]]
-				type = num	
-			[[[[heat_flow_transmission]]]]
-				type = num
-			[[[[heat_flow_internal]]]]
-				type = num
-			[[[[heat_flow_ventilation]]]]
-				type = num
-			[[[[heat_flow_ventilation_max]]]]
-				type = num
-			[[[[heat_flow_ventilation_min]]]]
-				type = num
-			[[[[heat_flow_irradiation]]]]
-				type = num
-			[[[[heat_flow_irradiation_max]]]]
-				type = num
-			[[[[heat_flow_irradiation_min]]]]
-				type = num
-			[[[[heat_flow_wanted]]]]
-				type = num	
-			[[[[heat_flow_ventilation_wanted]]]]
-				type = num	
-			[[[[heat_flow_irradiation_wanted]]]]
-				type = num
-			[[[[heat_flow_heating_wanted]]]]
-				type = num	
-			[[[[heat_flow_cooling_wanted]]]]
-				type = num	
 
-######################################################################################
-	[[model]]
-		[[[identify]]]
-			type = bool
-			value = False
-			enforce_updates = On
-			visu_acl = rw
-			
-		# UA = [UA_1amb UA_12 UA_13 UA_2amb UA_23 UA_3amb]...
-		[[[UA]]]
-			type = list
-		# C = [C_1 C_2 C_3]
-		[[[C]]]
-			type = list
-				
-######################################################################################
-	[[shading]]
-		[[[closed]]]	
-			type = bool
-			value = False
-			visu_acl = rw
+
+
+
