--- a/smarthome/items/knxcontrol.conf
+++ b/smarthome/items/knxcontrol.conf
@@ -202,4 +202,5 @@
 
 ######################################################################################
 	[[model]]
-		type = list
+		type = num
+		value = 1
