some advances in system identification

--- a/smarthome/etc/logic.conf
+++ b/smarthome/etc/logic.conf
@@ -24,6 +24,10 @@
 	filename = mysql_init.py
 	crontab = init
 
+[current_weather]
+	filename = current_weather.py
+	crontab = init | 0 * * *
+
 [knxcontrol]
 	filename = knxcontrol.py
 	crontab = * * * *
@@ -83,6 +87,13 @@
 	filename = flukso.py
 	crontab = * * * *
 
+############################################################################
+# MPC
+############################################################################
+[system_identification]
+	filename = system_identification.py
+#	watch_item = knxcontrol.model.identify
+	crontab = init
 
 ############################################################################
 # Thermal comfort management
