--- a/smarthome/items/knxcontrol.conf
+++ b/smarthome/items/knxcontrol.conf
@@ -33,50 +33,45 @@
 		[[[current]]]
 			[[[[temperature]]]]	
 				type = num
-				item = 'outside.measurements.temperature'
+				sh_listen = 'outside.measurements.temperature'
+				eval = value
+
+			[[[[humidity]]]]	
+				type = num
+				sh_listen = ''
 				eval = value
 
 			[[[[irradiation]]]]
-				[[[[[theoretical]]]]]
-					[[[[[[azimut]]]]]]
-						type = num
-					[[[[[[altitude]]]]]]
-						type = num
-					[[[[[[direct]]]]]]
-						type = num
-					[[[[[[diffuse]]]]]]
-						type = num
-					[[[[[[sensor]]]]]]
-						type = num	
 
 				[[[[[sensor]]]]]
 					type = num
-					orientation  = -5
+					sh_listen = 'outside.measurements.lightstrength'
+					orientation = -5
 					tilt = 10
-					item = 'outside.measurements.lightstrength'
 					eval = value * 128
+	
+				[[[[[direct]]]]]
+					type = num
 
-				[[[[[estimate]]]]]
-					[[[[[[direct]]]]]]
-						type = num
-					[[[[[[diffuse]]]]]]
-						type = num
-					[[[[[[clouds]]]]]]
-						type = num
+				[[[[[diffuse]]]]]
+					type = num
+
+				[[[[[clouds]]]]]
+					type = num
 						
 			[[[[precipitation]]]]	
 				type = num
-				item = 'outside.measurements.rain'
+				sh_listen = 'outside.measurements.rain'
 				eval = value
 
 			[[[[wind]]]]	
 				[[[[[speed]]]]]
 					type = num
-					item = 'outside.measurements.windspeed'
+					sh_listen = 'outside.measurements.windspeed'
 					eval = value
 				[[[[[direction]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
 					eval = value
 
 		[[[predictions]]]
@@ -90,23 +85,24 @@
 	[[energy]]
 		[[[electricity]]]
 			type = num
-			item = 'flukso.electricity_total'
+			sh_listen = 'flukso.electricity_total'
 			eval = value
+			quantity = 'Power'
+			unit = 'W'
 			
 		[[[gas]]]
 			type = num
-			item = 'flukso.gas'
+			sh_listen = 'flukso.gas'
 			eval = value
-
-		[[[fueloil]]]
-			type = num
-			item = ''
-			eval = value
+			quantity = 'Power'
+			unit = 'W'
 	
 		[[[water]]]
 			type = num
-			item = ''
+			sh_listen = ''
 			eval = value
+			quantity = 'Flow'
+			unit = 'l/min'
 			
 
 ######################################################################################
@@ -114,44 +110,45 @@
 		[[[living_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = '0.5*living.measurements.temperature_door + 0.5*study.measurements.temperature'
+				sh_listen = '0.5*living.measurements.temperature_door + 0.5*study.measurements.temperature'
 			[[[[airquality]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 				
 		[[[sleeping_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 			[[[[airquality]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 				
 		[[[bathroom_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 			[[[[airquality]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 				
 		[[[unheated_zone]]]
 			[[[[temperature]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 			[[[[airquality]]]]
 				type = num
-				item = ''
+				sh_listen = ''
 
 ######################################################################################
 	[[ventilation]]
-		[[[fanspeed]]]
-			type = num
-			item = ''
-
-		[[[heatrecovery]]]
-			type = bool
-			item = ''
+		[[[main]]]
+			[[[[fanspeed]]]]
+				type = num
+				sh_send = ''
+	
+			[[[[heatrecovery]]]]
+				type = bool
+				sh_send = ''
 
 ######################################################################################
 	[[heat]]
@@ -160,31 +157,34 @@
 				systemtype = 'heatpump'
 				[[[[[power]]]]]
 					type = num
-					item = ''
+					sh_listen = 'flukso.electricity_heatpump'
 					eval = value
 				[[[[[control]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
+					sh_send = ''
 			[[[[gasboiler]]]]
 				systemtype = 'condensing gas boiler'
 				[[[[[power]]]]]
 					type = num
-					item = ''
+					sh_listen = 'flukso.gas'
 					eval = value
 				[[[[[control]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
+					sh_send = ''
 
 		[[[emission]]]
 			[[[[firstfloor]]]]
 				systemtype = 'floorheating'
 				[[[[[power]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
 					eval = value
 				[[[[[control]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
+					sh_send = ''
 
 ######################################################################################
 	[[electricity]]
@@ -193,14 +193,16 @@
 				systemtype = 'pv'
 				[[[[[power]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
 					eval = value
 				[[[[[control]]]]]
 					type = num
-					item = ''
+					sh_listen = ''
+					sh_send = ''
 
 
 ######################################################################################
 	[[model]]
 		type = num
 		value = 1
+
