started writing functions as a plugin

--- a/etc/plugin.conf
+++ b/etc/plugin.conf
@@ -4,7 +4,11 @@
 [knx]
    class_name = KNX
    class_path = plugins.knx
-
+   
+[knxcontrol]
+   class_name = KNXControl
+   class_path = plugins.knxcontrol
+   
 [visu]
     class_name = WebSocket
     class_path = plugins.visu
