--- a/etc/logic.conf
+++ b/etc/logic.conf
@@ -20,44 +20,44 @@
 ######################################################################################
 # KNX Control
 ######################################################################################
-[mysql_init]
-	filename = mysql_init.py
-	crontab = init
+#[mysql_init]
+#	filename = mysql_init.py
+#	crontab = init
 
-[current_weather]
-	filename = current_weather.py
-	crontab = init | 0 * * *
+#[current_weather]
+#	filename = current_weather.py
+#	crontab = init | 0 * * *
 
-[knxcontrol]
-	filename = knxcontrol.py
-	crontab = * * * *
+#[knxcontrol]
+#	filename = knxcontrol.py
+#	crontab = * * * *
 
 # measurements
-[mysql_measurements]
-	filename = mysql_measurements.py
+#[mysql_measurements]
+#	filename = mysql_measurements.py
 
-[mysql_measurements_average_quarterhour]
-	filename = mysql_measurements_average_quarterhour.py
-	crontab = 0,15,30,45 * * *
-	prio = 5
+#[mysql_measurements_average_quarterhour]
+#	filename = mysql_measurements_average_quarterhour.py
+#	crontab = 0,15,30,45 * * *
+#	prio = 5
 	
-[mysql_measurements_average_week]
-	filename = mysql_measurements_average_week.py
-	crontab = 1 0 * 0
+#[mysql_measurements_average_week]
+#	filename = mysql_measurements_average_week.py
+#	crontab = 1 0 * 0
 	
-[mysql_measurements_average_month]
-	filename = mysql_measurements_average_month.py
-	crontab = 0 0 1 *
+#[mysql_measurements_average_month]
+#	filename = mysql_measurements_average_month.py
+#	crontab = 0 0 1 *
 
 # backups
 
-[mysql_backup]
-	filename = mysql_backup.py
-	crontab = 5 0 * 0
+#[mysql_backup]
+#	filename = mysql_backup.py
+#	crontab = 5 0 * 0
 	
-[mysql_measurements_backup]
-	filename = mysql_measurements_backup.py
-	crontab = 12 0 * 0
+#[mysql_measurements_backup]
+#	filename = mysql_measurements_backup.py
+#	crontab = 12 0 * 0
 
 
 ############################################################################
