--- a/etc/plugin.conf
+++ b/etc/plugin.conf
@@ -2,15 +2,16 @@
 
 
 [knx]
-   class_name = KNX
-   class_path = plugins.knx
+	class_name = KNX
+	class_path = plugins.knx
    
 [knxcontrol]
-   class_name = KNXControl
-   class_path = plugins.knxcontrol
+	class_name = KNXControl
+	class_path = plugins.knxcontrol
+	mysql_pass = admin
    
 [visu]
-    class_name = WebSocket
-    class_path = plugins.visu
+	class_name = WebSocket
+	class_path = plugins.visu
 
 
