updated measurements class fixed some bugs

--- a/etc/logic.conf
+++ b/etc/logic.conf
@@ -63,10 +63,10 @@
 ############################################################################
 # Alarms
 ############################################################################
-[alarms]
-	filename = alarms.py
-	crontab = * * * *
-	prio = 2
+#[alarms]
+#	filename = alarms.py
+#	crontab = * * * *
+#	prio = 2
 	
 [set_item]
 	filename = set_item.py
@@ -83,9 +83,9 @@
 ############################################################################
 # Flukso logics
 ############################################################################
-[flukso]
-	filename = flukso.py
-	crontab = * * * *
+#[flukso]
+#	filename = flukso.py
+#	crontab = * * * *
 
 ############################################################################
 # MPC
