added weather prediction downloading

--- a/items/knxcontrol.conf
+++ b/items/knxcontrol.conf
@@ -33,22 +33,18 @@
 		[[[current]]]
 			[[[[temperature]]]]	
 				type = num
-				sh_listen = 'outside.measurements.temperature'
-				eval = value
+				sh_listen = 'outside.measurements.temperature()'
 
 			[[[[humidity]]]]	
 				type = num
 				sh_listen = ''
-				eval = value
 
 			[[[[irradiation]]]]
-
 				[[[[[sensor]]]]]
 					type = num
-					sh_listen = 'outside.measurements.lightstrength'
+					sh_listen = '127*outside.measurements.lightstrength()'
 					orientation = -5
 					tilt = 10
-					eval = value * 128
 	
 				[[[[[direct]]]]]
 					type = num
@@ -61,20 +57,17 @@
 						
 			[[[[precipitation]]]]	
 				type = num
-				sh_listen = 'outside.measurements.rain'
-				eval = value
+				sh_listen = 'outside.measurements.rain()'
 
 			[[[[wind]]]]	
 				[[[[[speed]]]]]
 					type = num
-					sh_listen = 'outside.measurements.windspeed'
-					eval = value
+					sh_listen = 'outside.measurements.windspeed()'
 				[[[[[direction]]]]]
 					type = num
 					sh_listen = ''
-					eval = value
 
-		[[[predictions]]]
+		[[[prediction]]]
 			[[[[detailed]]]]
 				type = list
 
@@ -85,22 +78,19 @@
 	[[energy]]
 		[[[electricity]]]
 			type = num
-			sh_listen = 'flukso.electricity_total'
-			eval = value
+			sh_listen = 'flukso.electricity_total()'
 			quantity = 'Power'
 			unit = 'W'
 			
 		[[[gas]]]
 			type = num
-			sh_listen = 'flukso.gas'
-			eval = value
+			sh_listen = 'flukso.gas()'
 			quantity = 'Power'
 			unit = 'W'
 	
 		[[[water]]]
 			type = num
 			sh_listen = ''
-			eval = value
 			quantity = 'Flow'
 			unit = 'l/min'
 			
@@ -110,10 +100,12 @@
 		[[[living_zone]]]
 			[[[[temperature]]]]
 				type = num
-				sh_listen = '0.5*living.measurements.temperature_door + 0.5*study.measurements.temperature'
+				sh_listen = '0.5*living.measurements.temperature_door() + 0.5*study.measurements.temperature()'
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
+			[[[[shading]]]]
+				type = num
 				
 		[[[sleeping_zone]]]
 			[[[[temperature]]]]
@@ -122,6 +114,8 @@
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
+			[[[[shading]]]]
+				type = num
 				
 		[[[bathroom_zone]]]
 			[[[[temperature]]]]
@@ -130,6 +124,8 @@
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
+			[[[[shading]]]]
+				type = num
 				
 		[[[unheated_zone]]]
 			[[[[temperature]]]]
@@ -138,6 +134,8 @@
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
+			[[[[shading]]]]
+				type = num
 
 ######################################################################################
 	[[ventilation]]
@@ -157,8 +155,7 @@
 				systemtype = 'heatpump'
 				[[[[[power]]]]]
 					type = num
-					sh_listen = 'flukso.electricity_heatpump'
-					eval = value
+					sh_listen = 'flukso.electricity_heatpump()'
 				[[[[[control]]]]]
 					type = num
 					sh_listen = ''
@@ -167,8 +164,7 @@
 				systemtype = 'condensing gas boiler'
 				[[[[[power]]]]]
 					type = num
-					sh_listen = 'flukso.gas'
-					eval = value
+					sh_listen = 'flukso.gas()'
 				[[[[[control]]]]]
 					type = num
 					sh_listen = ''
@@ -180,11 +176,9 @@
 				[[[[[power]]]]]
 					type = num
 					sh_listen = ''
-					eval = value
 				[[[[[control]]]]]
 					type = num
 					sh_listen = ''
-					sh_send = ''
 
 ######################################################################################
 	[[electricity]]
@@ -198,11 +192,5 @@
 				[[[[[control]]]]]
 					type = num
 					sh_listen = ''
-					sh_send = ''
-
 
 ######################################################################################
-	[[model]]
-		type = num
-		value = 1
-
