--- a/etc/logic.conf
+++ b/etc/logic.conf
@@ -90,10 +90,10 @@
 ############################################################################
 # MPC
 ############################################################################
-[system_identification]
-	filename = system_identification.py
+#[system_identification]
+#	filename = system_identification.py
 #	watch_item = knxcontrol.model.identify
-	crontab = init
+#	crontab = init
 
 ############################################################################
 # Thermal comfort management
